# discord-bot-counter

./: main.py  pyproject.toml
cogs/: Counter.py
services/: database.py  models.py
